--- a/src/styles/headCard.scss
+++ b/src/styles/headCard.scss
@@ -12,6 +12,8 @@
     a {
       color: $dark-text-color;
     }
+#header-card {
+  .card {
     background-color: transparent;
     box-shadow: none;
     border-radius: 0px;
@@ -21,25 +23,41 @@
     img {
       height: 270px;
     }
+
     .content {
       padding: 1em 2em;
       border-top: none !important;
+
+      img {
+        margin-right: 10px;
+        border-radius: 50%;
+        height: 32px;
+        width: 32px;
+      }
+
+      a:hover {
+        color: $secondary-color;
+      }
+
       .date {
         padding: 6px 0;
-        float: right;
       }
+
       .header {
         color: $lighter-text-color;
-        font-family: "Raleway", sans-serif;
+        font-family: $title-font;
         font-size: 20px;
         letter-spacing: 3px;
       }
+
       .description {
-        font-family: "Abel", sans-serif;
+        font-family: $description-font;
         font-size: 26px;
         letter-spacing: 3px;
         line-height: 1.5;
-        color: $dark-text-color;
+        a {
+          color: $dark-text-color;
+        }
       }
     }
   }
@@ -49,4 +67,6 @@
 .ui.cards > .card > :first-child {
   border-radius: 0 !important;
   border-top: none !important;
+}
+  }
 }
