--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,10 +1,10 @@
 @import "./colours";
+@import "./fonts.scss";
+@import "./head-card";
 
 body {
   background: lighten($color: $background-color, $amount: 20);
-  font-family: "Lato", sans-serif;
-  // height: 100%;
+  font-family: $primary-font;
   margin: 0;
   padding: 0;
-  // width: 100%;
 }
