ft(form-modals): Create the login and register modal component
- Write test
- Create the login modal component
- Create the register modal component
- Create a style for the forms in the modals
- Modifiy the header card component
- Write unit tests

[Delivers #160259705]

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,11 +1,21 @@
-@import "./colours";
 @import "./fonts";
+@import "./colours";
 @import "./button";
 @import "./head-card";
+@import "./auth-form-modal";
 
 body {
   background: lighten($color: $background-color, $amount: 20);
   font-family: $primary-font;
   margin: 0;
   padding: 0;
+}
+
+a {
+  color: $darker-secondary-color;
+  &:hover {
+    color: $secondary-color;
+    cursor: pointer;
+    transition: 300ms all ease-in-out;
+  }
 }
